--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Press Start 2P', cursive;
-    color: goldenrod;
+    color: gold;
     margin: 0;
     background: #556270;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #FF6B6B, #556270);  /* Chrome 10-25, Safari 5.1-6 */
@@ -12,9 +12,9 @@ body {
     margin: 0, auto;
     padding: 40px;
     opacity: 0.8;
-    border: 2px solid goldenrod;
+    border: 2px solid gold;
     border-radius: 5px;
-    font-size: 6em;
+    font-size: 5em;
 }
 
 section {
@@ -24,6 +24,6 @@ section {
     align-items: center;
     width: 100%;
     height: 100vh;
-    
+    text-shadow: 2px 2px 10px darkturquoise;
     margin: 0, auto;
 }
